syntax = "proto3";

package auth.data;

option go_package = ".;data";

import "google/protobuf/timestamp.proto";


message User {
  int64 user_id = 2;
  string email = 4;
  string user_name = 3;
  // deprecated
  // in VN phone number format
  string phone_number = 5;
  string metadata = 6;
  google.protobuf.Timestamp last_signed_in = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}